GG-34220 Support for JDK17